--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "^4.23.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
