--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
@@ -18,8 +19,6 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "styled-normalize": "^8.0.7",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
