--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^14.1.1",
     "@types/antd": "^1.0.0",
     "@types/jest": "^27.4.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.23.6",
+    "momentjs": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
